--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node ./bin/www.js",
-    "db:createusers": "node -r dotenv/config ./db/scripts/users/createTable.js",
+    "db:createTable": "node -r dotenv/config ./db/scripts/users/createTable.js",
+    "db:readTable": "node -r dotenv/config ./db/scripts/users/readTable.js",
     "dev": "nodemon -r dotenv/config ./bin/www.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
