--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,52 @@ dist
 
 # TernJS port file
 .tern-port
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+cgd-react/node_modules
+cgd-react/.pnp
+cgd-react/.pnp.js
+
+# testing
+cgd-react/coverage
+
+# production
+cgd-react/build
+
+# misc
+cgd-react/.DS_Store
+cgd-react/.env.local
+cgd-react/.env.development.local
+cgd-react/.env.test.local
+.env.production.local
+
+cgd-react/npm-debug.log*
+cgd-react/yarn-debug.log*
+cgd-react/yarn-error.log*
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
